Fix #nt24 on safari

--- a/src/components/molecules/NaturalmenteTecnologici/index.module.scss
+++ b/src/components/molecules/NaturalmenteTecnologici/index.module.scss
@@ -29,6 +29,11 @@
   }
 }
 
+.video {
+  clip-path: url(#clip-00);
+  -webkit-clip-path: url(#clip-00);
+}
+
 .singleSectionsWrap {
   display: flex;
   flex-direction: row;
